// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoFactorAuthSettings render should render the initial state of the component 1`] = `
<div>
  <v-form
    v-on:submit="bound handleFormSubmit"
  >
    <label
      class="label"
    >
      Two Factor Authentication
    </label>
     
    <v-button
      class-name="is-primary is-medium"
      data-test="button-two-factor"
      disabled="true"
    >
      Disable Two Factor Auth
    </v-button>
  </v-form>
   
  <!---->
</div>
`;

exports[`TwoFactorAuthSettings render should show modal window for two factor auth 1`] = `
<div>
  <v-form
    v-on:submit="bound handleFormSubmit"
  >
    <label
      class="label"
    >
      Two Factor Authentication
    </label>
     
    <v-button
      class-name="is-primary is-medium"
      data-test="button-two-factor"
      disabled="true"
    >
      Disable Two Factor Auth
    </v-button>
  </v-form>
   
  <two-factor-auth-modal
    email="email"
    v-on:close="bound toggleTwoFactorAuthModal"
    v-on:confirm="bound handleConfirmTwoFactorAuthModal"
  />
</div>
`;
